# CompAstroLabs

coursework2/: 1a_rejection_method.csv  1b_norm_intensity.csv  1b_norm_intensity_tau_10.000000.csv  24697  24697.cpp  CMakeLists.txt  data.csv  data1.csv  data2.csv  importance_error.csv  plot.py  test_tau.csv
coursework3/: 24697  24697.cpp  A_0.200000s_lax_friedrichs_state.csv  A_0.200000s_lax_wendroff_state.csv  B_0.012000s_lax_friedrichs_state.csv  CMakeLists.txt  S_0.250000s_lax_friedrichs_state.csv  S_0.250000s_lax_wendroff_state.csv  plot.py  shock_a.txt  shock_b.txt  shock_sphere.txt
coursework3/debug/: 24697  A_0.200000s_lax_friedrichs_state.csv  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
coursework3/release/: 24697  A_0.200000s_hll_first_order_state.csv  A_0.200000s_hllc_first_order_state.csv  A_0.200000s_lax_friedrichs_second_order_state.csv  A_0.200000s_lax_friedrichs_state.csv  A_0.200000s_lax_wendroff_second_order_state.csv  A_0.200000s_lax_wendroff_state.csv  B_0.012000s_hll_first_order_state.csv  B_0.012000s_hllc_first_order_state.csv  B_0.012000s_lax_friedrichs_second_order_state.csv  B_0.012000s_lax_wendroff_second_order_state.csv  CMakeCache.txt  Makefile  cmake_install.cmake  (+6 more)
lab6/: 2a_N_10_smax_26.841113.txt  2a_N_12_smax_28.985011.txt  2a_N_12_smax_60.490719.txt  2a_N_4_smax_-483.333333.txt  2a_N_8_smax_-1209.728297.txt  2a_N_8_smax_27.548837.txt  2b_N_10_smax_25.107935.txt  2b_N_4_smax_63.514221.txt  2b_N_6_smax_47.603187.txt  2b_N_6_smax_72.653298.txt  2b_N_8_smax_50.618235.txt  CMakeLists.txt  main  main.cpp
(+203 files in other folders)
